Made website skeleton

--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
+---
+layout: default
+---
 
-<html lang="en-ca">
-
-<head>
-  <title>Joe's Desk</title>
-</head>
-
-<body>
-  <h1>Joe's Desk: Website under construction.</h1>
-</body>
-
-</html>
+<h1>Joe's Desk: Website under construction.</h1>
+<p>This is a sample piece of text for the home page.</p>
