--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="A page's description,
   usually one or two sentences."/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="layout2.css" >
+  <link rel="stylesheet" href="layout.css" >
   <link rel="stylesheet" href="colors.css" >
 </head>
 
