Put under jekyll

--- a/index.html
+++ b/index.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>Joe's Desk</title>
-  <meta name="description" content="A page's description,
-  usually one or two sentences."/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="layout.css" >
-  <link rel="stylesheet" href="colors.css" >
-</head>
-
-<body>
-
-<header>
-  joesdesk
-</header>
-
-<div id="content">
+---
+layout: default
+---
 
 <div id="articles">
 
@@ -46,14 +30,3 @@
   </article>
 
 </div>
-
-</div>
-
-<footer>
-  joesdesk
-</footer>
-
-
-</body>
-
-</html>
